--- a/Presentasi/css/gdex.css
+++ b/Presentasi/css/gdex.css
@@ -22,4 +22,31 @@ header {
     -o-background-size: cover;
     text-align: center;
     color: #fff;
-}i
+}
+.navbar-custom .navbar-brand {
+    color: #fed136;
+    font-family:Helvetica,Arial,cursive;
+}
+.navbar-custom .navbar-brand {
+    font-size: 3em;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+}
+p {
+    font-size: 16px;
+    line-height: 1.75;
+}
+.tracking {
+    height: 170px;
+}
+.btn green {
+    border-radius: 12px;
+    background-color: #3f2488;
+}
+.intro-lead-in {
+font-family:"Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;font-style:italic;font-size:40px;line-height:100px;margin-bottom:25px;
+}
+.intro-text {
+    padding-top: 200px;
+}
